@@ -58,6 +58,7 @@ struct _UMLClass {
   int template;
   GList *formal_params;
 
+  int wrap_lines;
   
   /* Calculated variables: */
   real font_ascent;
